# liblogger

./: CMakeLists.txt  README.md  example.cc  logutil.h
inspector/: inspector.hpp
logutil/: logutil.h  logutil_example.cc  logutil_example_dylib.cc
slack/: slack.h  slack_example.cc
